==> ghi-electronics/TinyCLR-Ports/Targets/LPC177x_LPC178x/LPC17_UsbDevice.cpp <==
#include <string.h>
#include "LPC17.h"
#include "../../Drivers/USBClient/USBClient.h"
#define FRAME_INT           0x00000001
#define EP_FAST_INT         0x00000002
#define EP_SLOW_INT         0x00000004
#define DEV_STAT_INT        0x00000008
#define CCEMTY_INT          0x00000010
#define CDFULL_INT          0x00000020
#define RxENDPKT_INT        0x00000040
#define TxENDPKT_INT        0x00000080
#define EP_RLZED_INT        0x00000100
#define ERR_INT             0x00000200
#define PKT_LNGTH_MASK      0x000003FF
#define PKT_DV              0x00000400
#define PKT_RDY             0x00000800
#define CTRL_RD_EN          0x00000001
#define CTRL_WR_EN          0x00000002
#define CMD_SET_ADDR        0x00D00500
#define CMD_CFG_DEV         0x00D80500
#define CMD_SET_MODE        0x00F30500
#define CMD_RD_FRAME        0x00F50500
#define DAT_RD_FRAME        0x00F50200
#define CMD_RD_TEST         0x00FD0500
#define DAT_RD_TEST         0x00FD0200
#define CMD_SET_DEV_STAT    0x00FE0500
#define CMD_GET_DEV_STAT    0x00FE0500
#define DAT_GET_DEV_STAT    0x00FE0200
#define CMD_GET_ERR_CODE    0x00FF0500
#define DAT_GET_ERR_CODE    0x00FF0200
#define CMD_RD_ERR_STAT     0x00FB0500
#define DAT_RD_ERR_STAT     0x00FB0200
#define DAT_WR_BYTE(x)     (0x00000100 | ((x) << 16))
#define CMD_SEL_EP(x)      (0x00000500 | ((x) << 16))
#define DAT_SEL_EP(x)      (0x00000200 | ((x) << 16))
#define CMD_SEL_EP_CLRI(x) (0x00400500 | ((x) << 16))
#define DAT_SEL_EP_CLRI(x) (0x00400200 | ((x) << 16))

void LPC17_UsbDevice_InitializeConfiguration(UsClientState *usClientState) {
    int32_t controllerIndex = 0;

    if (usClientState != nullptr) {
        usClientState->controllerIndex = controllerIndex;

        usClientState->maxFifoPacketCountDefault = LPC17_USB_PACKET_FIFO_COUNT;
        usClientState->totalEndpointsCount = LPC17_USB_ENDPOINT_COUNT;
        usClientState->totalPipesCount = LPC17_USB_PIPE_COUNT;

        // Update endpoint size DeviceDescriptor Configuration if device value is different to default value
        usClientState->deviceDescriptor.MaxPacketSizeEp0 = TinyCLR_UsbClient_GetEndpointSize(0);

        usbDeviceDrivers[controllerIndex].usClientState = usClientState;
    }
}

bool LPC17_UsbDevice_Initialize(UsClientState *usClientState) {
    DISABLE_INTERRUPTS_SCOPED(irq);

    if (usClientState == nullptr)
        return false;

    int32_t controllerIndex = usClientState->controllerIndex;

    LPC17_InterruptInternal_Activate(USB_IRQn, (uint32_t*)&LPC17_UsbDevice_InterruptHandler, 0);

    for (int32_t i = 0; i < LPC17_USB_ENDPOINT_COUNT; i++)
        EndpointInit[i].word = 0;       // All useable endpoints initialize to unused

    for (auto pipe = 0; pipe < LPC17_USB_ENDPOINT_COUNT; pipe++) {
        auto idx = 0;
        if (usClientState->pipes[pipe].RxEP != USB_ENDPOINT_NULL) {
            idx = usClientState->pipes[pipe].RxEP;
            EndpointInit[idx].bits.ED = 0;
            EndpointInit[idx].bits.DE = 0;
        }

        if (usClientState->pipes[pipe].TxEP != USB_ENDPOINT_NULL) {
            idx = usClientState->pipes[pipe].TxEP;
            EndpointInit[idx].bits.ED = 1;
            EndpointInit[idx].bits.DE = 1;
        }

        if (idx != 0) {
            EndpointInit[idx].bits.EN = idx;
            EndpointInit[idx].bits.IN = 0;//itfc->bInterfaceNumber;
            EndpointInit[idx].bits.ET = USB_ENDPOINT_ATTRIBUTE_BULK & 0x03; //ep->bmAttributes & 0x03;
            EndpointInit[idx].bits.CN = 1;        // Always only 1 configuration = 1
            EndpointInit[idx].bits.AISN = 0;        // No alternate interfaces
            EndpointInit[idx].bits.EE = 1;        // Enable this endpoint
            EndpointInit[idx].bits.MPS = usClientState->maxEndpointsPacketSize[idx];
        }
    }

    usClientState->firstGetDescriptor = true;

    LPC17_UsbDevice_ProtectPins(controllerIndex, true);

    return true;
}

bool LPC17_UsbDevice_Uninitialize(UsClientState *usClientState) {
    DISABLE_INTERRUPTS_SCOPED(irq);

    LPC17_InterruptInternal_Deactivate(USB_IRQn);

    if (usClientState != nullptr) {
        LPC17_UsbDevice_ProtectPins(usClientState->controllerIndex, false);
        usClientState->currentState = USB_DEVICE_STATE_UNINITIALIZED;
    }

    return true;
}

bool LPC17_UsbDevice_StartOutput(UsClientState* usClientState, int32_t endpoint) {
    int32_t m, n, val;

    DISABLE_INTERRUPTS_SCOPED(irq);

    /* if the halt feature for this endpoint is set, then just
       clear all the characters */
    if (usClientState->endpointStatus[endpoint] & USB_STATUS_ENDPOINT_HALT) {
        TinyCLR_UsbClient_ClearEndpoints(usClientState, endpoint);
        return true;
    }

    //If txRunning, interrupts will drain the queue
    if (!usbDeviceDrivers[usClientState->controllerIndex].txRunning[endpoint]) {
        usbDeviceDrivers[usClientState->controllerIndex].txRunning[endpoint] = true;

        // Calling both LPC17_UsbDevice_TxPacket & EP_TxISR in this routine could cause a TX FIFO overflow
        LPC17_UsbDevice_TxPacket(usClientState, endpoint);
    }
    else if (irq.IsDisabled()) {

        n = LPC17_UsbDevice_EPAdr(endpoint, 1); // It is an output endpoint for sure
        if ((USBEpIntSt & (1 << n)))//&& (USBEpIntEn & (1 << n)) )//only if enabled
        {
            m = n >> 1;

            if (m == 0)//EP0
            {
                USBEpIntClr = 1 << n;
                while ((USBDevIntSt & CDFULL_INT) == 0);
                val = USBCmdData;

                if (val & EP_SEL_STP)        /* Setup Packet */
                {
                    LPC17_UsbDevice_ProcessEP0(usClientState, 0, 1);// out setup
                }
                else {
                    if ((n & 1) == 0)                /* OUT Endpoint */
                    {
                        LPC17_UsbDevice_ProcessEP0(usClientState, 0, 0);// out not setup
                    }
                    else {
                        LPC17_UsbDevice_ProcessEP0(usClientState, 1, 0);// in not setup
                    }
                }
            }
            else {
                if (usClientState->queues[m] && usClientState->isTxQueue[endpoint])
                    LPC17_UsbDevice_ProcessEndPoint(usClientState, m, 1);//out
                else
                    LPC17_UsbDevice_ProcessEndPoint(usClientState, m, 0);//in
            }
        }
    }

    return true;
}

bool LPC17_UsbDevice_RxEnable(UsClientState* usClientState, int32_t endpoint) {
    if (endpoint >= LPC17_USB_ENDPOINT_COUNT)
        return false;

    DISABLE_INTERRUPTS_SCOPED(irq);

    if (nacking_rx_OUT_data[endpoint])
        LPC17_UsbDevice_Enpoint_RxInterruptHandler(usClientState, endpoint);//force interrupt to read the pending EP

    return true;
}

void LPC17_UsbDevice_ResetEvent(UsClientState *usClientState) {
    LPC17_UsbDevice_HardwareReset();
    LPC17_UsbDevice_DeviceAddress = 0;

    // clear all flags
    TinyCLR_UsbClient_ClearEvent(usClientState, 0xFFFFFFFF);

    for (int32_t ep = 0; ep < LPC17_USB_ENDPOINT_COUNT; ep++) {
        usbDeviceDrivers[usClientState->controllerIndex].txRunning[ep] = false;
        usbDeviceDrivers[usClientState->controllerIndex].txNeedZLPS[ep] = false;
    }

    usClientState->deviceState = USB_DEVICE_STATE_DEFAULT;
    usClientState->address = 0;
    TinyCLR_UsbClient_StateCallback(usClientState);
}

bool LPC17_UsbDevice_ProtectPins(int32_t controllerIndex, bool On) {
    UsClientState *usClientState = usbDeviceDrivers[controllerIndex].usClientState;

    DISABLE_INTERRUPTS_SCOPED(irq);

    if (usClientState) {
        if (On) {
            usClientState->deviceState = USB_DEVICE_STATE_ATTACHED;

            TinyCLR_UsbClient_StateCallback(usClientState);

            LPC17_UsbDevice_StartHardware();
        }
        else {
            LPC17_UsbDevice_HardwareReset();

            LPC17_UsbDevice_DeviceAddress = 0;

            LPC17_UsbDevice_StopHardware();
        }

        return true;
    }

    return false;
}

uint32_t TinyCLR_UsbClient_GetEndpointSize(int32_t endpoint) {
    return endpoint == 0 ? LPC17_USB_ENDPOINT0_SIZE : LPC17_USB_ENDPOINT_SIZE;
}
